--- a/css/style.css
+++ b/css/style.css
@@ -127,4 +127,33 @@ body {
     animation: parpadeo 0.5s infinite;
 }
 
-@media (max-width: 450px) {}
+@media (min-width: 1600px) {
+    .contenedor {
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        width: 100%;
+        max-width: 1200px;
+        height: 100%;
+        max-height: 950px;
+        border-radius: 8px;
+        overflow: hidden;
+        position: absolute;
+        z-index: 10;
+    }
+
+
+    .maquina {
+        width: 100%;
+        max-width: 545px;
+        cursor: pointer;
+
+    }
+
+    .letras {
+        max-height: 200px;
+        position: absolute;
+        z-index: 50;
+
+    }
+
+}
